edit sytle.css file and made corrections to index.html file

--- a/index.html
+++ b/index.html
@@ -5,57 +5,66 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing page</title>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <div class="first section">
-        <div class="header">
-            <div>Header Logo</div>
+    <nav class="navbar">
+        <div class="container">
+            <div class="logo">Header Logo</div>
             <ul class="links">
                 <li><a href="#">header link one</a></li>
                 <li><a href="#">header link two</a></li>
                 <li><a href="#">header link three</a></li>
             </ul>
         </div>
-        <div class="hero text">
-            <div>This website is awesome</div>
-            <p>This website has some subtext that goes here under the
-                main title. It's s smaller font and the color is lower 
-            contrast  </p>
-            <button class="signup">Sign up</button>
-            <img>
+        <div class="hero-text">
+            <div>
+             <h1>This website is awesome</h1>
+             <p>This website has some subtext that goes here under the
+                main title. It's a smaller font and the color is lower 
+              contrast  </p>
+              <button>Sign up</button>
+            </div>
+            <img src="https://traversymedia.com/images/grid.svg" alt=""/>
+        </div>
+    </nav>
+    <div class="second-section">
+       <h2>Some random information.</h2>
+        <div class="container2">
+           <div class="card">
+              <div class="box"></div>
+               <p class="text">this is some subtext under an illustration or image</p>
+           </div>
+           <div class="card">
+             <div class="box"></div>
+              <p class="text">this is some subtext under an illustration or image</p>
+           </div>
+           <div class="card">
+             <div class="box"></div>
+              <p class="text">this is some subtext under an illustration or image</p>
+           </div>
+           <div class="card">
+             <div class="box"></div>
+              <p class="text">this is some subtext under an illustration or image</p>
+           </div>
         </div>
     </div>
-    <div class="info">
-        <p>Some random information.</p>
-    </div>
-    <div class="container">
-        <div class="box">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="box">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="box">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-        <div class="box">
-            <p>this is some subtext under an illustration or image</p>
-        </div>
-    </div>
-    <div class="third section">
-        <div class="card">
+    <div class="third-section">
+        <div class="card2">
             <p>This is an inspiring quote, or a testimonial from a
             customer. Maybe it's just filling up space, or Maybe
             people will actually read it. Who knows? All i know is that it looks nice.</p>
             <div class="quote">-Thor, God of Thunder</div>
         </div>
     </div>
-    <div class="fourth section">
-        <div class="calltoaction">
-            <p>Call to action! It's time!</p>
-            <p>Sign up for our product by clicking that button right over there!</p>
+    <div class="fourth-section">
+        <div class="container3">
+           <div class="calltoaction">
+             <p>Call to action! It's time!</p>
+             <p class="click">Sign up for our product by clicking that button right over there!</p>
+            </div>
+           <button>sign up</button>
         </div>
-        <button>sign up</button>
     </div>
     <div class="footer">
         <div>Copyright © The Odin project 2022</div>
